test/all/parse_interface_parens/baseline/verify.err
test/all/parse_interface_parens/parse_interface_parens.dzn:33:20: error
    on hello: world(); // parse error here
                   ^
                   `;' expected
